Fix : Footer text align center(looks better)

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ nav ul li.btn.hide i:before {
   background-color: #373e40;
   text-align: center;
   padding: 50px 80px;
-  text-align: justify;
+  text-align: center;
 }
 
 .panel1 {
